--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Behavrioal Cloning Project #\n",
+    "# Behavrioal Cloning Project (for debugging) #\n",
     "\n",
     "This is a toy model, mainly used for DEBUGGING. \n",
     "\n",
