--- a/model.ipynb
+++ b/model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Behavrioal Cloning Project (for debugging) #\n",
     "\n",
-    "This is a toy model, mainly used for DEBUGGING. \n",
+    "This is a toy model, mainly used for DEBUGGING. Please visit model_rv.ipynb for the corrected version.\n",
     "\n",
     "1. The [sample training data](https://d17h27t6h515a5.cloudfront.net/topher/2016/December/584f6edd_data/data.zip) is used for training model.\n",
     "\n",
